Bug 305750 - Logviewer crashes on searching
Summary: Logviewer crashes on searching
Status: RESOLVED FIXED
Alias: None
Product: telepathy
Classification: Unmaintained
Component: log-viewer (other bugs)
Version First Reported In: git-latest
Platform: unspecified Linux
: NOR normal
Target Milestone: Future
Assignee: Telepathy Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-08-25 09:53 UTC by Martin Klapetek
Modified: 2012-08-25 15:10 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 0.5.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Martin Klapetek 2012-08-25 09:53:34 UTC
Tried searching something in the history and logviewer crashed everytime.

The crash can be reproduced every time.

-- Backtrace:
Application: KDE IM Log Viewer (ktp-log-viewer), signal: Segmentation fault
Using host libthread_db library "/lib/x86_64-linux-gnu/libthread_db.so.1".
[Current thread is 1 (Thread 0x7f696d0c6840 (LWP 6529))]

Thread 7 (Thread 0x7f6957553700 (LWP 6530)):
#0  pthread_cond_wait@@GLIBC_2.3.2 () at ../nptl/sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:162
#1  0x00007f696a222dec in ?? () from /usr/lib/x86_64-linux-gnu/libQtWebKit.so.4
#2  0x00007f696a222f19 in ?? () from /usr/lib/x86_64-linux-gnu/libQtWebKit.so.4
#3  0x00007f696633be9a in start_thread (arg=0x7f6957553700) at pthread_create.c:308
#4  0x00007f6966fd84bd in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#5  0x0000000000000000 in ?? ()

Thread 6 (Thread 0x7f6956c52700 (LWP 6531)):
#0  0x00007f6966fccb03 in __GI___poll (fds=<optimized out>, nfds=<optimized out>, timeout=<optimized out>) at ../sysdeps/unix/sysv/linux/poll.c:87
#1  0x00007f696b42f036 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007f696b42f164 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007f69688ae426 in QEventDispatcherGlib::processEvents (this=0x7f69500008c0, flags=...) at kernel/qeventdispatcher_glib.cpp:426
#4  0x00007f696887dc82 in QEventLoop::processEvents (this=<optimized out>, flags=...) at kernel/qeventloop.cpp:149
#5  0x00007f696887ded7 in QEventLoop::exec (this=0x7f6956c51d40, flags=...) at kernel/qeventloop.cpp:204
#6  0x00007f696877cfa7 in QThread::exec (this=<optimized out>) at thread/qthread.cpp:501
#7  0x00007f696877ffcb in QThreadPrivate::start (arg=0x1398680) at thread/qthread_unix.cpp:298
#8  0x00007f696633be9a in start_thread (arg=0x7f6956c52700) at pthread_create.c:308
#9  0x00007f6966fd84bd in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#10 0x0000000000000000 in ?? ()

Thread 5 (Thread 0x7f6954d5d700 (LWP 6532)):
#0  0x00007f6966fccb03 in __GI___poll (fds=<optimized out>, nfds=<optimized out>, timeout=<optimized out>) at ../sysdeps/unix/sysv/linux/poll.c:87
#1  0x00007f696b42f036 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007f696b42f164 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007f69688ae3bf in QEventDispatcherGlib::processEvents (this=0x7f69480008c0, flags=...) at kernel/qeventdispatcher_glib.cpp:424
#4  0x00007f696887dc82 in QEventLoop::processEvents (this=<optimized out>, flags=...) at kernel/qeventloop.cpp:149
#5  0x00007f696887ded7 in QEventLoop::exec (this=0x7f6954d5cd10, flags=...) at kernel/qeventloop.cpp:204
#6  0x00007f696877cfa7 in QThread::exec (this=<optimized out>) at thread/qthread.cpp:501
#7  0x00007f696885d9ff in QInotifyFileSystemWatcherEngine::run (this=0x1483090) at io/qfilesystemwatcher_inotify.cpp:248
#8  0x00007f696877ffcb in QThreadPrivate::start (arg=0x1483090) at thread/qthread_unix.cpp:298
#9  0x00007f696633be9a in start_thread (arg=0x7f6954d5d700) at pthread_create.c:308
#10 0x00007f6966fd84bd in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#11 0x0000000000000000 in ?? ()

Thread 4 (Thread 0x7f694ffff700 (LWP 6533)):
#0  0x00007f6966fccb03 in __GI___poll (fds=<optimized out>, nfds=<optimized out>, timeout=<optimized out>) at ../sysdeps/unix/sysv/linux/poll.c:87
#1  0x00007f696b42f036 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007f696b42f49a in g_main_loop_run () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007f695435998b in ?? () from /usr/lib/x86_64-linux-gnu/gio/modules/libdconfsettings.so
#4  0x00007f696b4509e5 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#5  0x00007f696633be9a in start_thread (arg=0x7f694ffff700) at pthread_create.c:308
#6  0x00007f6966fd84bd in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#7  0x0000000000000000 in ?? ()

Thread 3 (Thread 0x7f694f7fe700 (LWP 6534)):
#0  0x00007f6966fccb03 in __GI___poll (fds=<optimized out>, nfds=<optimized out>, timeout=<optimized out>) at ../sysdeps/unix/sysv/linux/poll.c:87
#1  0x00007f696b42f036 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007f696b42f49a in g_main_loop_run () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007f696acd8406 in ?? () from /usr/lib/x86_64-linux-gnu/libgio-2.0.so.0
#4  0x00007f696b4509e5 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#5  0x00007f696633be9a in start_thread (arg=0x7f694f7fe700) at pthread_create.c:308
#6  0x00007f6966fd84bd in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#7  0x0000000000000000 in ?? ()

Thread 2 (Thread 0x7f6941ffb700 (LWP 6545)):
#0  0x00007f6966fccb03 in __GI___poll (fds=<optimized out>, nfds=<optimized out>, timeout=<optimized out>) at ../sysdeps/unix/sysv/linux/poll.c:87
#1  0x00007f696b42f036 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007f696b42f164 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007f69688ae3bf in QEventDispatcherGlib::processEvents (this=0x7f68d80011d0, flags=...) at kernel/qeventdispatcher_glib.cpp:424
#4  0x00007f696887dc82 in QEventLoop::processEvents (this=<optimized out>, flags=...) at kernel/qeventloop.cpp:149
#5  0x00007f696887ded7 in QEventLoop::exec (this=0x7f6941ffad40, flags=...) at kernel/qeventloop.cpp:204
#6  0x00007f696877cfa7 in QThread::exec (this=<optimized out>) at thread/qthread.cpp:501
#7  0x00007f696877ffcb in QThreadPrivate::start (arg=0x17ce730) at thread/qthread_unix.cpp:298
#8  0x00007f696633be9a in start_thread (arg=0x7f6941ffb700) at pthread_create.c:308
#9  0x00007f6966fd84bd in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#10 0x0000000000000000 in ?? ()

Thread 1 (Thread 0x7f696d0c6840 (LWP 6529)):
[KCrash Handler]
#6  0x00007f696bf4a436 in Tp::DBusProxy::objectPath (this=0x0) at /home/mck182/Work/Telepathy/telepathy-qt-0.9.3/TelepathyQt/dbus-proxy.cpp:131
#7  0x00007f696bdeeb48 in Tp::Account::uniqueIdentifier (this=0x0) at /home/mck182/Work/Telepathy/telepathy-qt-0.9.3/TelepathyQt/account.cpp:2080
#8  0x000000000041df5e in EntityProxyModel::filterAcceptsRow (this=0x123e130, source_row=0, source_parent=...) at /home/mck182/Work/Telepathy/ktp-text-ui/logviewer/entity-proxy-model.cpp:51
#9  0x00007f6967f344a8 in QSortFilterProxyModelPrivate::create_mapping (this=0x12254c0, source_parent=...) at itemviews/qsortfilterproxymodel.cpp:327
#10 0x00007f6967f353e0 in QSortFilterProxyModelPrivate::update_persistent_indexes (this=0x12254c0, source_indexes=...) at itemviews/qsortfilterproxymodel.cpp:1016
#11 0x00007f6967f35b79 in QSortFilterProxyModelPrivate::_q_clearMapping (this=0x12254c0) at itemviews/qsortfilterproxymodel.cpp:310
#12 0x00007f6967f35f82 in QSortFilterProxyModel::invalidate (this=<optimized out>) at itemviews/qsortfilterproxymodel.cpp:2332
#13 0x000000000041e567 in EntityProxyModel::setSearchHits (this=0x123e130, searchHits=...) at /home/mck182/Work/Telepathy/ktp-text-ui/logviewer/entity-proxy-model.cpp:86
#14 0x0000000000414991 in LogViewer::globalSearchFinished (this=0x7fff59f94110, operation=0x17cb9e0) at /home/mck182/Work/Telepathy/ktp-text-ui/logviewer/log-viewer.cpp:182
#15 0x000000000041239e in LogViewer::qt_static_metacall (_o=0x7fff59f94110, _c=QMetaObject::InvokeMetaMethod, _id=6, _a=0x7fff59f93720) at /home/mck182/Work/Telepathy/ktp-text-ui/build/logviewer/moc_log-viewer.cpp:69
#16 0x00007f6968893281 in QMetaObject::activate (sender=0x17cb9e0, m=<optimized out>, local_signal_index=<optimized out>, argv=0x7fff59f93720) at kernel/qobject.cpp:3547
#17 0x00000000004251e5 in Tpl::PendingOperation::finished (this=0x17cb9e0, _t1=0x17cb9e0) at /home/mck182/Work/Telepathy/telepathy-logger-qt/build/TelepathyLoggerQt4/_gen/pending-operation.moc.hpp:111
#18 0x00000000004253f9 in Tpl::PendingOperation::emitFinished (this=0x17cb9e0) at /home/mck182/Work/Telepathy/telepathy-logger-qt/TelepathyLoggerQt4/pending-operation.cpp:98
#19 0x00000000004250a1 in Tpl::PendingOperation::qt_static_metacall (_o=0x17cb9e0, _c=QMetaObject::InvokeMetaMethod, _id=4, _a=0x1540aa0) at /home/mck182/Work/Telepathy/telepathy-logger-qt/build/TelepathyLoggerQt4/_gen/pending-operation.moc.hpp:62
#20 0x00007f6968898446 in QObject::event (this=0x17cb9e0, e=<optimized out>) at kernel/qobject.cpp:1195
#21 0x00007f6967984894 in notify_helper (e=0x17c87b0, receiver=0x17cb9e0, this=0x1033d60) at kernel/qapplication.cpp:4559
#22 QApplicationPrivate::notify_helper (this=0x1033d60, receiver=0x17cb9e0, e=0x17c87b0) at kernel/qapplication.cpp:4531
#23 0x00007f6967989713 in QApplication::notify (this=0x7fff59f94160, receiver=0x17cb9e0, e=0x17c87b0) at kernel/qapplication.cpp:4420
#24 0x00007f696c5ed456 in KApplication::notify (this=0x7fff59f94160, receiver=0x17cb9e0, event=0x17c87b0) at ../../kdeui/kernel/kapplication.cpp:311
#25 0x00007f696887ee9c in QCoreApplication::notifyInternal (this=0x7fff59f94160, receiver=0x17cb9e0, event=0x17c87b0) at kernel/qcoreapplication.cpp:876
#26 0x00007f6968882c6a in sendEvent (event=0x17c87b0, receiver=0x17cb9e0) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:231
#27 QCoreApplicationPrivate::sendPostedEvents (receiver=0x0, event_type=0, data=0x100dff0) at kernel/qcoreapplication.cpp:1500
#28 0x00007f69688adf93 in sendPostedEvents () at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:236
#29 postEventSourceDispatch (s=<optimized out>) at kernel/qeventdispatcher_glib.cpp:279
#30 0x00007f696b42ed53 in g_main_context_dispatch () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#31 0x00007f696b42f0a0 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#32 0x00007f696b42f164 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#33 0x00007f69688ae3bf in QEventDispatcherGlib::processEvents (this=0x100f4b0, flags=...) at kernel/qeventdispatcher_glib.cpp:424
#34 0x00007f6967a2cd5e in QGuiEventDispatcherGlib::processEvents (this=<optimized out>, flags=...) at kernel/qguieventdispatcher_glib.cpp:204
#35 0x00007f696887dc82 in QEventLoop::processEvents (this=<optimized out>, flags=...) at kernel/qeventloop.cpp:149
#36 0x00007f696887ded7 in QEventLoop::exec (this=0x7fff59f94090, flags=...) at kernel/qeventloop.cpp:204
#37 0x00007f6968882f67 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1148
#38 0x0000000000413348 in main (argc=3, argv=0x7fff59f94468) at /home/mck182/Work/Telepathy/ktp-text-ui/logviewer/main.cpp:48
Comment 1 Daniel Vrátil 2012-08-25 15:10:13 UTC
Git commit 526f2dfb42c523eba235ccb5ea3e422abf162094 by Dan Vrátil.
Committed on 25/08/2012 at 17:07.
Pushed by dvratil into branch 'kde-telepathy-0.5'.

Fix crash when Tpl::SearchHit has null account
REVIEW: 106176
FIXED-IN: 0.5.1

M  +10   -2    logviewer/entity-proxy-model.cpp

http://commits.kde.org/telepathy-text-ui/526f2dfb42c523eba235ccb5ea3e422abf162094