Fix crash when Tpl::SearchHit has null account

BUG: 305750
REVIEW: 106176
FIXED-IN: 0.5.1